static/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */
body {
    display: flex;
    min-height: 100vh;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
}

.icon-block {
    padding: 0 15px;
}

.icon-block .material-icons {
    font-size: inherit;
}

html {
    font-family: "Merriweather", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

nav .brand-logo {
    width: max-content;
}

.issue-title {
    font-size: 1.64rem;
    line-height: 110%;
    margin: 1.0933333333rem 0 0.656rem 0;
    color: #000000
}

/* Forms
   ========================================================================== */
button,
input,
optgroup,
select,
textarea {
    font-family: "Merriweather", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

/* Datepicker colour overrides */
.datepicker-date-display {
    background-color: #000;
}

.datepicker-cancel,
.datepicker-clear,
.datepicker-today,
.datepicker-done {
    color: #000;
}

.datepicker-day-button:focus {
    background-color: #9e9e9e;
}

.datepicker-table td.is-selected {
    background-color: #000;
}

.datepicker-table td.is-today {
    color: #757575;
}

/* Sort dropdown overrides */
dropdown-content li > a, .dropdown-content li > span {
    color: #000;
}

/* Issue cards */
.issue-cards-container {
    display: flex;
    flex-wrap: wrap;
}

.issue-cards-container .card {
    margin: 1em;
    flex-basis: calc(20% - 2em);
}

.issue-cards-container .card-action {
    color: black !important;
}

